About - fix overflow and cow

--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -318,7 +318,7 @@
       left: 0;
       z-index: 999;
 
-      background-image: url(../images/desktop/myy.png);
+      background-image: url(../images/desktop/cow-myy.png);
 
       background-repeat: no-repeat;
       background-position: right -2px bottom 140px;
